[package]
name = "ehealth-apple-wallet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
#rocket_contrib = { version = "<=0.4.7", features = ["tera_templates", "serve"], default_features = false }
#rocket = "0.4"
#rocket_contrib = { version = "0.4", features = ["tera_templates", "serve"], default_features = false }
base45 = "3"
base64 = "0.13"
flate2 = { version = "1", features = ["zlib"], default-features = false }
coset = "0.1"
cbor = "0.4"
serde_derive = "1"
serde = "1"
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_cbor = { version = "0.11", features = ["tags"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
openssl = "0.10"
zip = "0.5"
hex = "0.4"
include_dir = "0.6"
regex = "1"
